Compilation errors in java.desktop with VS 2017

XMLWordPrintable

    • b07

      With the VS 2017 tool chain the following errors occur:

      jib > t:/workspace/open/src/java.desktop/windows/native/libawt/windows/awt_Component.cpp(7131): warning C4302: 'type cast': truncation from 'void *' to 'jboolean'
      jib > t:/workspace/open/src/java.desktop/windows/native/libawt/windows/awt_Component.cpp(7152): warning C4302: 'type cast': truncation from 'void *' to 'jboolean'
      jib > t:/workspace/open/src/java.desktop/windows/native/libawt/windows/awt_Desktop.cpp(95): warning C4311: 'type cast': pointer truncation from 'HINSTANCE' to 'int'
      jib > t:/workspace/open/src/java.desktop/windows/native/libawt/windows/awt_Desktop.cpp(95): warning C4302: 'type cast': truncation from 'HINSTANCE' to 'int'
      jib > t:/workspace/open/src/java.desktop/windows/native/libawt/windows/awt_Frame.cpp(1610): warning C4312: 'type cast': conversion from 'DWORD' to 'void *' of greater size
      jib > t:/workspace/open/src/java.desktop/windows/native/libawt/windows/awt_Frame.cpp(1619): warning C4312: 'type cast': conversion from 'DWORD' to 'void *' of greater size
      jib > t:/workspace/open/src/java.desktop/windows/native/libawt/windows/awt_Frame.cpp(1631): warning C4312: 'type cast': conversion from 'DWORD' to 'void *' of greater size
      jib > t:/workspace/open/src/java.desktop/windows/native/libawt/windows/awt_List.cpp(828): warning C4311: 'type cast': pointer truncation from 'void *' to 'jint'
      jib > t:/workspace/open/src/java.desktop/windows/native/libawt/windows/awt_List.cpp(828): warning C4302: 'type cast': truncation from 'void *' to 'jint'
      jib > t:/workspace/open/src/java.desktop/windows/native/libawt/windows/awt_List.cpp(1015): warning C4302: 'type cast': truncation from 'void *' to 'jboolean'
      jib > t:/workspace/open/src/java.desktop/windows/native/libawt/windows/awt_Toolkit.cpp(1110): warning C4312: 'type cast': conversion from 'jint' to 'HIMC' of greater size
      jib > t:/workspace/open/src/java.desktop/windows/native/libawt/windows/awt_Toolkit.cpp(3143): warning C4311: 'type cast': pointer truncation from 'HINSTANCE' to 'int'
      jib > t:/workspace/open/src/java.desktop/windows/native/libawt/windows/awt_Toolkit.cpp(3143): warning C4302: 'type cast': truncation from 'HINSTANCE' to 'int'
      jib > t:/workspace/open/src/java.desktop/windows/native/libawt/windows/awt_Window.cpp(3919): warning C4302: 'type cast': truncation from 'void *' to 'jboolean'
      jib > t:/workspace/open/src/java.desktop/share/native/libfontmanager/sunFont.c(222): warning C4312: 'type cast': conversion from 'jint' to 'void *' of greater size
      jib > t:/workspace/open/src/java.desktop/share/native/libfontmanager/sunFont.c(260): warning C4312: 'type cast': conversion from 'jint' to 'GlyphInfo *' of greater size

            Assignee:
            Sergey Bylokhov
            Reporter:
            Roger Riggs
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: