8198895: Compilation errors in java.desktop with VS 2017

Reviewed-by: prr